# GDolphin

./: Cargo.toml  LICENSE  README.md
forge_mobile/: Cargo.toml
forge_mobile/src/: lib.rs
forge_mobile/src-tauri/: tauri.conf.json
forge_mobile/src-tauri/src/: main.rs
forge_mobile/src/editor/: buffer.rs  mod.rs  syntax.rs
forge_mobile/src/lsp/: client.rs
forge_mobile/src/solana/: client.rs  swap.rs
