[package]
name = "forge_mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tauri-build = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ropey = "1.6"
tree-sitter = "0.22"
tree-sitter-rust = "0.23"
lsp-types = "0.95"
anyhow = "1.0"

[build-dependencies]
tauri-build = "1.5"