[package]
name = "forge_mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tauri-build = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
ropey = "1.6"
tree-sitter = "0.22"
tree-sitter-rust = "0.23"
lsp-types = "0.95"
anyhow = "1.0"

# Solana blockchain integration
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
solana-transaction-status = "1.17"
bs58 = "0.5"
borsh = "0.10"

# WebSocket for real-time data
futures = "0.3"
async-trait = "0.1"

[build-dependencies]
tauri-build = "1.5"