[package]
name = "forge_mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tauri-build = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
ropey = "1.6"
tree-sitter = "0.22"
tree-sitter-rust = "0.23"
lsp-types = "0.95"
anyhow = "1.0"

# Solana blockchain integration
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
solana-transaction-status = "1.17"
bs58 = "0.5"
borsh = "0.10"

# Jupiter DEX integration for swaps
jupiter-swap-api = "0.1"

# Jito Labs for MEV protection and bundle submission
jito-searcher-client = "0.1"

# HTTP client for Helius RPC
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"

# WebSocket for real-time data
futures = "0.3"
async-trait = "0.1"

# Validation and signing
ed25519-dalek = "2.0"
sha2 = "0.10"

# Utilities
hex = "0.4"
base64 = "0.21"

[build-dependencies]
tauri-build = "1.5"